Changed some of the colors

--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #1d5888;
+  --primary-color: #3c454c;
   --secondary-color: #d42424;
   --dark-color: #292929;
   --white-color: #dff3e4;
