--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #3c454c;
-  --secondary-color: #d42424;
+  --primary-color: #07689F;
+  --secondary-color: #FACF39;
   --dark-color: #292929;
   --white-color: #dff3e4;
 }
