Updated styling and links

--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #07689F;
+  --primary-color: #292929;
   --secondary-color: #FACF39;
   --dark-color: #292929;
   --white-color: #dff3e4;
